--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>E-Shop3 </title>
+  <title>E-Shop </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
@@ -19,6 +19,9 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
+  
+ 
+  
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
