--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -22,8 +22,10 @@
   <script type="text/babel" src="/js/book_list_component.jsx"></script>
   <script type="text/babel" src="/js/book_list_container.jsx"></script>
   <script type="text/babel" src="/js/book_component.jsx"></script>
+  <script type="text/babel" src="/js/book_container.jsx"></script>
   <script type="text/babel" src="/js/book_administration_component.jsx"></script>
   <script type="text/babel" src="/js/book_administration_container.jsx"></script>
+  <script type="text/babel" src="/js/book_administration_container_edit.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
