--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>E-Shop </title>
+  <title>Knygu parduotuve </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
@@ -8,9 +8,46 @@
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"
   >
-</head>
-<body>
-  <div id="root" class="container"></div>
+    <style>
+        body {
+            background-color: #ffea95;
+            padding: 20px;
+            margin: 0;
+        }
+        h1, h2, p, ul, li {
+            font-family: Helvetica, Arial, sans-serif;
+        }
+        ul.header li {
+            display: inline;
+            list-style-type: none;
+            margin: 0;
+        }
+        ul.header {
+            background-color: #111;
+            padding: 0;
+        }
+        ul.header li a {
+            color: #FFF;
+            font-weight: bold;
+            text-decoration: none;
+            padding: 20px;
+            display: inline-block;
+        }
+        .content {
+            background-color: #FFF;
+            padding: 20px;
+        }
+        .content h2 {
+            padding: 0;
+            margin: 0;
+        }
+        .content li {
+            margin-bottom: 10px;
+        }
+        .active {
+            background-color: #0099FF;
+        }
+    </style>
 
   <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
@@ -18,7 +55,251 @@
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <script type="text/babel" src="/js/hello_world_component.jsx"></script>
-  <script type="text/babel" src="/js/index.jsx"></script>
+
+</head>
+<body>
+  <div id="container" class="container"></div>
+
+  <script type="text/babel">
+
+//************************************  ADMINISTRATION  ************************
+
+const ProductAdministrationComponent = function(props) {
+
+    var title;
+    var saveButton;
+    var cancelButton;
+    if (props.id) {
+        title = 'Atnaujinamas produktas ' + props.id;
+    } else {
+        title = 'Kuriamas naujas produktas';
+        saveButton = <button className="btn btn-success" style={{ marginRight: '20px' }} onClick={props.onSaveClick}>Issaugoti</button>;
+        cancelButton = <Link to="/" ><button className="btn" onClick=""> Atsaukti</button></Link>;
+    }
+
+    //TRUKSTA PUBLISHED AT
+    return (
+            <div>
+                <h2>{title}</h2>
+                <form>
+                    <div className="form-group">
+                        <label>Pavadinimas</label>
+                        <input className="form-control" value={props.title} onChange={props.onTitleChange} />
+                    </div>
+                    <div className="form-group">
+                        <label>Autorius</label>
+                        <input className="form-control" value={props.author} onChange={props.onAuthorChange} />
+                    </div>
+                    <div className="form-group">
+                        <label>ISBN</label>
+                        <input className="form-control" value={props.isbn} onChange={props.onIsbnChange}/>
+                    </div>
+                    <div className="form-group">
+                        <label>Kiekis</label>
+                        <input className="form-control" value={props.quantity} onChange={props.onQuantityChange} />
+                    </div>
+                    {saveButton}
+                    {cancelButton}
+                </form>
+            </div>
+    );
+};
+
+
+const ProductAdministrationContainer = React.createClass({
+    getInitialState: function() {
+        return {
+
+            title: this.props.params.author,
+            author: this.props.params.id,
+            isbn: this.props.params.id,
+            quantity: this.props.params.id,
+            publishedAt: this.props.params.id
+        };
+    },
+
+    handleSaveClick: function(e) {
+        var self = this;
+        var body = {
+
+            title: this.state.title,
+            author: this.state.author,
+            isbn: this.state.isbn,
+            quantity: this.state.quantity,
+            publishedAt: this.state.publishedAt
+        }
+        axios.post('/api/books', body)
+            .then(function (response) {
+                var p = response.data;
+                self.setState({
+                    id: p.id,
+                    title: p.title,
+                    author: p.author,
+                    isbn: p.isbn,
+                    quantity: p.quantity,
+                    publishedAt: p.publishedAt
+                });
+                self.props.router.push('/update' + p.id);
+            });
+        e.preventDefault();
+    },
+
+    handleTitleChange: function(e) {
+        this.setState({ title: e.target.value });
+    },
+
+    handleAuthorChange: function(e) {
+        this.setState({ author: e.target.value });
+    },
+
+    handleIsbnChange: function(e) {
+        this.setState({ isbn: e.target.value });
+    },
+
+    handleQuantityChange: function(e) {
+        this.setState({ quantity: e.target.value });
+    },
+
+    render: function() {
+        return (
+                <ProductAdministrationComponent
+                        id={this.state.id}
+                        title={this.state.title}
+                        author={this.state.author}
+                        isbn={this.state.isbn}
+                        quantity={this.state.quantity}
+                        onTitleChange={this.handleTitleChange}
+                        onAuthorChange={this.handleAuthorChange}
+                        onIsbnChange={this.handleIsbnChange}
+                        onQuantityChange={this.handleQuantityChange}
+                        onSaveClick={this.handleSaveClick}
+                />
+        );
+    }
+});
+
+
+//************************************ PRODUCTS ************************
+
+
+      const ProductCardComponent = React.createClass({
+          render: function() {
+              var url = '/update' + this.props.id;
+              return (
+                      <div className="col-sm-6 col-md-3">
+                          <div className="thumbnail" >
+                              <div className="caption">
+                                  <h3>{this.props.title}</h3>
+                                  <p>{this.props.author}</p>
+                                  <p>ID = {this.props.id} </p>
+                                  <Link to={url}>
+                                      <p><button className="btn btn-primary" role="button">Atnaujinti</button></p>
+                                  </Link>
+                              </div>
+                          </div>
+                      </div>
+              );
+          }
+      });
+
+      const ProductListComponent = function(props) {
+          const productCards = props.products.map(function (product, index) {
+              return (
+                      <ProductCardComponent
+                              key={index}
+                              id={product.id}
+                              title={product.title}
+                              author={product.author}
+                              published={product.publishedAt}
+                              quantity={product.quantity}
+                              isbn={product.isbn}
+
+                      />
+              );
+          });
+          return (
+                  <div className="row">
+                      {productCards}</div>
+          );
+      };
+
+      const ProductListContainer  = React.createClass({
+          getInitialState: function() {
+              return { products: [] };
+          },
+
+          componentWillMount: function() {
+              const self = this;
+              axios.get('/api/books')
+                  .then(function (response) {
+                      self.setState({ products: response.data });
+                  })
+          },
+
+          render: function() {
+              return <ProductListComponent products={this.state.products} />
+          }
+      });
+
+
+//********************************************************
+
+var Router = ReactRouter.Router;
+var Route = ReactRouter.Route;
+var IndexRoute = ReactRouter.IndexRoute;
+var hashHistory = ReactRouter.hashHistory;
+var IndexLink = ReactRouter.IndexLink;
+var Link = ReactRouter.Link;
+
+      const ProductListPage = function () {
+          return <ProductListContainer />
+      };
+
+      const destination = document.querySelector("#container");
+
+      const Home = React.createClass({
+          render: function() {
+              return (
+                      <div>
+                          <h2>HELLO</h2>
+
+                      </div>
+              );
+          }
+      });
+
+      const App = React.createClass({
+          render: function(props) {
+              return (
+                      <div className="col-sm-12 col-md-12">
+                          <h1>Biblioteka</h1>
+                          <ul className="header">
+                              <li><IndexLink to="/" activeClassName="active">Knygu sarasas</IndexLink></li>
+                              <li><Link to="/new-book" activeClassName="active">Sukurti nauja knyga</Link></li>
+                          </ul>
+                          <div className="content">
+                              {this.props.children}
+                          </div>
+                      </div>
+              )
+          }
+      });
+
+
+      ReactDOM.render(
+              <Router>
+                  <Route path="/" component={App}>
+                      <IndexRoute component={ProductListPage}/>
+                      <Route path="/new-book" component={ProductAdministrationContainer} />
+                      <Route path="/update:id" component={ProductAdministrationContainer} />
+                  </Route>
+              </Router>,
+          destination
+
+      );
+  </script>
 </body>
+
 </html>
+<script type="text/babel" src="/js/index.jsx"></script>
+<script type="text/babel" src="/js/hello_world_component.jsx"></script>
