--- a/react-exam/bin/src/main/resources/static/index.html
+++ b/react-exam/bin/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Library </title>
+  <title>E-Shop </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
@@ -18,16 +18,7 @@
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <script type="text/babel" src="/js/components/book_list_component.jsx"></script>
-  <script type="text/babel" src="/js/components/BookCardComponent.jsx"></script>
-  <script type="text/babel" src="/js/components/LibraryAdministartorComponent.jsx"></script>
-  <script type="text/babel" src="/js/components/BookListAdminstratorComponent.jsx"></script>
-
-  <script type="text/babel" src="/js/container/BookListContainer.jsx"></script>
-  <script type="text/babel" src="/js/container/book_adminstration_container.jsx"></script>
-  <script type="text/babel" src="/js/container/book_list_administrator_container.jsx"></script>
-
-  <script type="text/babel" src ="/js/NavigationComponent.jsx"></script>
+  <script type="text/babel" src="/js/hello_world_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
