--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -8,10 +8,12 @@
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous"
   >
+  
 </head>
 <body>
   <div id="root" class="container"></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>	
   <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
   <script src="https://unpkg.com/react-router@2.8.1/umd/ReactRouter.js"></script>
@@ -19,6 +21,16 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
+  
+  <script type="text/babel" src="/js/containers/book_list_container.jsx"></script>
+  <script type="text/babel" src="/js/containers/admin_container.jsx"></script>
+  
+  
+  <script type="text/babel" src="/js/components/admin_component.jsx"></script>
+  <script type="text/babel" src="/js/components/book_list_component.jsx"></script>
+  <script type="text/babel" src="/js/components/book_card_component.jsx"></script>
+  <script type="text/babel" src="/js/navigation_component.jsx"></script>
+  
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
