--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>E-Shop </title>
+  <title>Books List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
@@ -18,6 +18,13 @@
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
+  <script type="text/babel" src="/js/components/books_list_component.jsx"></script>
+  <script type="text/babel" src="/js/components/add_book_component.jsx"></script>
+  <script type="text/babel" src="/js/components/edit_book_component.jsx"></script>
+  <script type="text/babel" src="/js/containers/books_list_container.jsx"></script>
+  <script type="text/babel" src="/js/containers/add_book_container.jsx"></script>
+  <script type="text/babel" src="/js/containers/edit_book_container.jsx"></script>
+  
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
