--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -17,6 +17,16 @@
   <script src="https://unpkg.com/react-router@2.8.1/umd/ReactRouter.js"></script>
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="http://momentjs.com/downloads/moment-with-locales.js"></script>
+
+  <script type="text/babel" src="/js/containers/UpdateProductContainer.js"></script>
+  <script type="text/babel" src="/js/containers/ProductContainer.js"></script>
+  <script type="text/babel" src="/js/containers/ProductListContainer.js"></script>
+  <script type="text/babel" src="/js/containers/CreateBookContainer.js"></script>
+  
+  <script type="text/babel" src="/js/Components/AdminProductComponent.js"></script>
+  <script type="text/babel" src="/js/components/ProductComponent.js"></script>
+  <script type="text/babel" src="/js/components/ProductListComponent.js"></script>
 
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
