--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
+  <script type="text/babel" src="/js/form_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
