--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -12,11 +12,16 @@
 <body>
   <div id="root" class="container"></div>
 
+  <script src="http://momentjs.com/downloads/moment.min.js"></script>
+
   <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
   <script src="https://unpkg.com/react-router@2.8.1/umd/ReactRouter.js"></script>
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <script type="text/babel" src="js/buttons.jsx"></script>
+
 
   <script type="text/babel" src="js/Components/product_card_component.jsx"></script>
   <script type="text/babel" src="js/Components/product_list_component.jsx"></script>
