--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 	<script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-	<script type="text/babel" src="js/bookList.jsx"></script>
+	<script type="text/babel" src="bookList"></script>
 	<script type="text/babel" src="js/hello_world_component.jsx"></script>
 	<script type="text/babel" src="js/index.jsx"></script>
 </body>
