--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>E-Shop </title>
+  <title>Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
