--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>E-Shop </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8">
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -17,6 +18,10 @@
   <script src="https://unpkg.com/react-router@2.8.1/umd/ReactRouter.js"></script>
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <script type="text/babel" src="/js/components/BookDetailComponent.js"></script>
+  <script type="text/babel" src="/js/components/BookSingleComponent.js"></script>
+  <script type="text/babel" src="/js/components/BooksListComponent.js"></script>
 
   <script type="text/babel" src="/js/hello_world_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
