Adde react solution

--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>E-Shop </title>
+  <title>Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link
     rel="stylesheet"
@@ -11,14 +11,19 @@
 </head>
 <body>
   <div id="root" class="container"></div>
-
+  <script src="http://momentjs.com/downloads/moment.js"></script>
   <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
   <script src="https://unpkg.com/react-router@2.8.1/umd/ReactRouter.js"></script>
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <script type="text/babel" src="/js/hello_world_component.jsx"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
+  <script type="text/babel" src="/js/components/BookEditComponent.jsx"></script>
+  <script type="text/babel" src="/js/components/BookListComponent.jsx"></script>
+  <script type="text/babel" src="/js/components/BookRowComponent.jsx"></script>
+  <script type="text/babel" src="/js/containers/BookEditContainer.jsx"></script>
+  <script type="text/babel" src="/js/containers/BookListContainer.jsx"></script>
 </body>
 </html>
+
