--- a/react-exam/src/main/resources/static/index.html
+++ b/react-exam/src/main/resources/static/index.html
@@ -18,7 +18,16 @@
   <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-  <script type="text/babel" src="/js/hello_world_component.jsx"></script>
+  <script type="text/babel" src="/js/components/book_component.jsx"></script>
+  <script type="text/babel" src="/js/components/book_list_component.jsx"></script>
+  <script type="text/babel" src="/js/components/form_component.jsx"></script>
+
+  <script type="text/babel" src="/js/containers/book_list_container.jsx"></script>
+  <script type="text/babel" src="/js/containers/form_container.jsx"></script>
+
+  <script type="text/babel" src="/js/navigation/navigation.jsx"></script>
+  <script type="text/babel" src="/js/navigation/nav_link.jsx"></script>
+  <script src="http://momentjs.com/downloads/moment.min.js"></script>
   <script type="text/babel" src="/js/index.jsx"></script>
 </body>
 </html>
